# aiida-scheduler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
aiida_scheduler/: __init__.py  client.py  control.py  scheduler.py
aiida_scheduler/backend/: __init__.py  scheduler.py
aiida_scheduler/cli/: __init__.py  cmd_aiida_scheduler.py  cmd_scheduler.py
aiida_scheduler/tools/pytest_fixtures/: scheduler.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  quick_start.ipynb
docs/source/html/: example.html
frontend/: build-plugin.js  package-lock.json  package.json
frontend/src/: SchedulerDetail.js  SchedulerTable.js  index.js
tests/: conftest.py  test_scheduler.py
