[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiida_scheduler"
# This 'version' is now dynamic, read from your __init__.py
dynamic = ["version"]
description = "Process scheduler for AiiDA."
authors = [{name = "Xing Wang", email = "xingwang1991@gmail.com"}]
readme = "README.md"
dependencies = [
    "aiida-scheduler",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: AiiDA",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Documentation = "https://aiida-scheduler.readthedocs.io"
Source = "https://github.com/aiidateam/aiida-scheduler"

[project.optional-dependencies]
pre-commit = [
    "pre-commit~=2.2",
    "pylint~=2.17.4",
]


[project.scripts]
aiida-scheduler = "aiida_scheduler.cli.cmd_aiida_scheduler:aiida_scheduler"

[project.entry-points."aiida.cmdline"]
"aiida-scheduler" = "aiida_scheduler.cli.cmd_aiida_scheduler:aiida_scheduler"

[project.entry-points."aiida.data"]
"scheduler.scheduler" = "aiida_scheduler.orm.scheduler:SchedulerNode"

[project.entry-points."aiida_gui.plugins"]
scheduler = "aiida_scheduler.backend:plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aiida_scheduler", "aiida_scheduler.*"]

[tool.setuptools.package-data] # Corrected from [tool.uptools.package-data]
aiida_scheduler = ["backend/static/*", "backend/static/**/*"]

[tool.setuptools.dynamic]
version = { attr = "aiida_scheduler.__version__" }
